--- a/node2.html
+++ b/node2.html
@@ -28,20 +28,20 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1556"
+<A NAME="tex2html572"
   HREF="node3.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1550"
+<A NAME="tex2html566"
   HREF="javascriptexamples.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1544"
+<A NAME="tex2html560"
   HREF="node1.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1552"
-  HREF="node281.html">
+<A NAME="tex2html568"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1554"
-  HREF="node284.html">
+<A NAME="tex2html570"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
@@ -80,19 +80,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1557"
+<B> Sig:</B> <A NAME="tex2html573"
   HREF="node3.html">&#205;ndice de Tablas</A>
-<B>Sup:</B> <A NAME="tex2html1551"
+<B>Sup:</B> <A NAME="tex2html567"
   HREF="javascriptexamples.html">Apuntes de la Asignatura</A>
-<B> Ant:</B> <A NAME="tex2html1545"
+<B> Ant:</B> <A NAME="tex2html561"
   HREF="node1.html">&#205;ndice General</A>
 <B> Con:</B> 
-<A NAME="tex2html1552"
-  HREF="node281.html">
+<A NAME="tex2html568"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1554"
-  HREF="node284.html">
+<A NAME="tex2html570"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
 </DIV>
@@ -105,26 +105,22 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html247"
   HREF="node48.html#5755">NFA que reconoce los prefijos viables</A>
 <LI><A NAME="tex2html249"
-  HREF="node49.html#6125">DFA equivalente al NFA de la figura</A> <A HREF="node48.html#fig:nfa">5.1</A>
-<LI><A NAME="tex2html309"
-  HREF="node84.html#9637">Jerarquía de Prototipos Nativos</A>
-<LI><A NAME="tex2html310"
-  HREF="node84.html#9646">__proto__ and prototypes</A></OL>
+  HREF="node49.html#6125">DFA equivalente al NFA de la figura</A> <A HREF="node48.html#fig:nfa">5.1</A></OL>
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1556"
+<A NAME="tex2html572"
   HREF="node3.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1550"
+<A NAME="tex2html566"
   HREF="javascriptexamples.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1544"
+<A NAME="tex2html560"
   HREF="node1.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1552"
-  HREF="node281.html">
+<A NAME="tex2html568"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1554"
-  HREF="node284.html">
+<A NAME="tex2html570"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
@@ -163,11 +159,11 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1557"
+<B> Sig:</B> <A NAME="tex2html573"
   HREF="node3.html">&#205;ndice de Tablas</A>
-<B>Sup:</B> <A NAME="tex2html1551"
+<B>Sup:</B> <A NAME="tex2html567"
   HREF="javascriptexamples.html">Apuntes de la Asignatura</A>
-<B> Ant:</B> <A NAME="tex2html1545"
+<B> Ant:</B> <A NAME="tex2html561"
   HREF="node1.html">&#205;ndice General</A>
 </DIV>
 <!--End of Navigation Panel-->
