--- a/node41.html
+++ b/node41.html
@@ -28,20 +28,20 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html2450"
+<A NAME="tex2html1466"
   HREF="node42.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2444"
+<A NAME="tex2html1460"
   HREF="node28.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2438"
+<A NAME="tex2html1454"
   HREF="node40.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2446"
-  HREF="node281.html">
+<A NAME="tex2html1462"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2448"
-  HREF="node284.html">
+<A NAME="tex2html1464"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
@@ -80,19 +80,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2451"
+<B> Sig:</B> <A NAME="tex2html1467"
   HREF="node42.html">Práctica: Ambiguedad en C++</A>
-<B>Sup:</B> <A NAME="tex2html2445"
+<B>Sup:</B> <A NAME="tex2html1461"
   HREF="node28.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html2439"
+<B> Ant:</B> <A NAME="tex2html1455"
   HREF="node40.html">Usando Pegjs con CoffeeScript</A>
 <B> Con:</B> 
-<A NAME="tex2html2446"
-  HREF="node281.html">
+<A NAME="tex2html1462"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html2448"
-  HREF="node284.html">
+<A NAME="tex2html1464"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
 </DIV>
@@ -103,11 +103,11 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html2452"
+<LI><A NAME="tex2html1468"
   HREF="node41.html#SECTION044130010000000000000">Donde</A>
-<LI><A NAME="tex2html2453"
+<LI><A NAME="tex2html1469"
   HREF="node41.html#SECTION044130020000000000000">Tareas</A>
-<LI><A NAME="tex2html2454"
+<LI><A NAME="tex2html1470"
   HREF="node41.html#SECTION044130030000000000000">Referencias para esta Práctica</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
@@ -188,32 +188,32 @@ Referencias para esta Práctica</A>
   
 
 <UL>
-<LI>Véase el capítulo <I>Heroku</I> <A HREF="node253.html#chapter:heroku">58</A>
+<LI>Véase el capítulo <I>Heroku</I> <A HREF="node253.html#chapter:heroku"><IMG  ALIGN="BOTTOM" BORDER="1" ALT="[*]" SRC="crossref.png"></A>
 </LI>
 <LI><A NAME="tex2html207"
   HREF="https://devcenter.heroku.com/articles/heroku-postgresql">Heroku Postgres</A>
 </LI>
-<LI>Véase el capítulo <I>DataMapper</I> <A HREF="node262.html#chapter:datamapper">59</A>
+<LI>Véase el capítulo <I>DataMapper</I> <A HREF="node262.html#chapter:datamapper"><IMG  ALIGN="BOTTOM" BORDER="1" ALT="[*]" SRC="crossref.png"></A>
 </LI>
 </UL>
 
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html2450"
+<A NAME="tex2html1466"
   HREF="node42.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2444"
+<A NAME="tex2html1460"
   HREF="node28.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2438"
+<A NAME="tex2html1454"
   HREF="node40.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2446"
-  HREF="node281.html">
+<A NAME="tex2html1462"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2448"
-  HREF="node284.html">
+<A NAME="tex2html1464"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
@@ -252,11 +252,11 @@ Referencias para esta Práctica</A>
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2451"
+<B> Sig:</B> <A NAME="tex2html1467"
   HREF="node42.html">Práctica: Ambiguedad en C++</A>
-<B>Sup:</B> <A NAME="tex2html2445"
+<B>Sup:</B> <A NAME="tex2html1461"
   HREF="node28.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html2439"
+<B> Ant:</B> <A NAME="tex2html1455"
   HREF="node40.html">Usando Pegjs con CoffeeScript</A>
 </DIV>
 <!--End of Navigation Panel-->
