--- a/node47.html
+++ b/node47.html
@@ -28,20 +28,20 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html2611"
+<A NAME="tex2html1627"
   HREF="node48.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2605"
+<A NAME="tex2html1621"
   HREF="node44.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2599"
+<A NAME="tex2html1615"
   HREF="node46.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2607"
-  HREF="node281.html">
+<A NAME="tex2html1623"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2609"
-  HREF="node284.html">
+<A NAME="tex2html1625"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
@@ -80,19 +80,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2612"
+<B> Sig:</B> <A NAME="tex2html1628"
   HREF="node48.html">Conceptos Básicos del Análisis</A>
-<B>Sup:</B> <A NAME="tex2html2606"
+<B>Sup:</B> <A NAME="tex2html1622"
   HREF="node44.html">Análisis Sintáctico Ascendente en</A>
-<B> Ant:</B> <A NAME="tex2html2600"
+<B> Ant:</B> <A NAME="tex2html1616"
   HREF="node46.html">Ejemplo Simple en Jison</A>
 <B> Con:</B> 
-<A NAME="tex2html2607"
-  HREF="node281.html">
+<A NAME="tex2html1623"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html2609"
-  HREF="node284.html">
+<A NAME="tex2html1625"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
 </DIV>
@@ -103,26 +103,26 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html2613"
+<LI><A NAME="tex2html1629"
   HREF="node47.html#SECTION04530010000000000000">calculator.jison</A>
-<LI><A NAME="tex2html2614"
+<LI><A NAME="tex2html1630"
   HREF="node47.html#SECTION04530020000000000000">main.js</A>
-<LI><A NAME="tex2html2615"
+<LI><A NAME="tex2html1631"
   HREF="node47.html#SECTION04530030000000000000">calculator.html</A>
-<LI><A NAME="tex2html2616"
+<LI><A NAME="tex2html1632"
   HREF="node47.html#SECTION04530040000000000000">Rakefile</A>
-<LI><A NAME="tex2html2617"
+<LI><A NAME="tex2html1633"
   HREF="node47.html#SECTION04530050000000000000">global.css</A>
-<LI><A NAME="tex2html2618"
+<LI><A NAME="tex2html1634"
   HREF="node47.html#SECTION04530060000000000000">test/assert.html</A>
-<LI><A NAME="tex2html2619"
+<LI><A NAME="tex2html1635"
   HREF="node47.html#SECTION04530070000000000000">test/test.css</A>
-<LI><A NAME="tex2html2620"
+<LI><A NAME="tex2html1636"
   HREF="node47.html#SECTION04530080000000000000">test/test.html</A>
 </UL>
 </UL>
 <BR>
-<LI><A NAME="tex2html2621"
+<LI><A NAME="tex2html1637"
   HREF="node47.html#SECTION04531000000000000000">Práctica: Calculadora con Listas de Expresiones y Variables</A>
 </UL>
 <!--End of Table of Child-Links-->
@@ -475,7 +475,7 @@ no inicializada <code>a = c</code>
 <LI>El lenguaje debería admitir expresiones vacías, estos es secuencias consecutivas de puntos y comas sin producir error (<code>a = 4;;; b = 5</code>)
 </LI>
 <LI>Introduzca pruebas unitarias como las descritas en 
-la sección <A HREF="node125.html#section:tstingfacil">29.1</A> (<I><A NAME="tex2html246"
+la sección <A HREF="node125.html#section:tstingfacil"><IMG  ALIGN="BOTTOM" BORDER="1" ALT="[*]" SRC="crossref.png"></A> (<I><A NAME="tex2html246"
   HREF="http://net.tutsplus.com/tutorials/javascript-ajax/quick-tip-quick-and-easy-javascript-testing-with-assert/">Quick Tip: Quick and Easy JavaScript Testing with “Assert”</A></I>)
 
 <P>
@@ -485,20 +485,20 @@ la sección <A HREF="node125.html#section:tstingfacil">29.1</A> (<I><A NAME="tex
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html2611"
+<A NAME="tex2html1627"
   HREF="node48.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2605"
+<A NAME="tex2html1621"
   HREF="node44.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2599"
+<A NAME="tex2html1615"
   HREF="node46.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2607"
-  HREF="node281.html">
+<A NAME="tex2html1623"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2609"
-  HREF="node284.html">
+<A NAME="tex2html1625"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
@@ -537,11 +537,11 @@ la sección <A HREF="node125.html#section:tstingfacil">29.1</A> (<I><A NAME="tex
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2612"
+<B> Sig:</B> <A NAME="tex2html1628"
   HREF="node48.html">Conceptos Básicos del Análisis</A>
-<B>Sup:</B> <A NAME="tex2html2606"
+<B>Sup:</B> <A NAME="tex2html1622"
   HREF="node44.html">Análisis Sintáctico Ascendente en</A>
-<B> Ant:</B> <A NAME="tex2html2600"
+<B> Ant:</B> <A NAME="tex2html1616"
   HREF="node46.html">Ejemplo Simple en Jison</A>
 </DIV>
 <!--End of Navigation Panel-->
