--- a/node50.html
+++ b/node50.html
@@ -28,20 +28,20 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html2664"
+<A NAME="tex2html1680"
   HREF="node51.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2658"
+<A NAME="tex2html1674"
   HREF="node44.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2652"
+<A NAME="tex2html1668"
   HREF="node49.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2660"
-  HREF="node281.html">
+<A NAME="tex2html1676"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2662"
-  HREF="node284.html">
+<A NAME="tex2html1678"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
@@ -80,19 +80,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2665"
+<B> Sig:</B> <A NAME="tex2html1681"
   HREF="node51.html">Práctica: Análisis de Ámbito</A>
-<B>Sup:</B> <A NAME="tex2html2659"
+<B>Sup:</B> <A NAME="tex2html1675"
   HREF="node44.html">Análisis Sintáctico Ascendente en</A>
-<B> Ant:</B> <A NAME="tex2html2653"
+<B> Ant:</B> <A NAME="tex2html1669"
   HREF="node49.html">Construcción de las Tablas</A>
 <B> Con:</B> 
-<A NAME="tex2html2660"
-  HREF="node281.html">
+<A NAME="tex2html1676"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html2662"
-  HREF="node284.html">
+<A NAME="tex2html1678"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
 </DIV>
@@ -103,11 +103,11 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html2666"
+<LI><A NAME="tex2html1682"
   HREF="node50.html#SECTION04560010000000000000">Donde</A>
-<LI><A NAME="tex2html2667"
+<LI><A NAME="tex2html1683"
   HREF="node50.html#SECTION04560020000000000000">Tareas</A>
-<LI><A NAME="tex2html2668"
+<LI><A NAME="tex2html1684"
   HREF="node50.html#SECTION04560030000000000000">Referencias para esta Práctica</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
@@ -217,7 +217,7 @@ Referencias para esta Práctica</A>
 <UL>
 <LI>Véase el capítulo 
 <I>Oauth: Google, Twitter, GitHub, Facebook</I>
-<A HREF="node268.html#chapter:googleoauth">61</A>
+<A HREF="node268.html#chapter:googleoauth"><IMG  ALIGN="BOTTOM" BORDER="1" ALT="[*]" SRC="crossref.png"></A>
 </LI>
 <LI>Véase 
 <A NAME="tex2html254"
@@ -239,32 +239,32 @@ y
 <A NAME="tex2html259"
   HREF="https://github.com/SFEley/sinatra-flash">sinatra-flash</A>
 </LI>
-<LI>Véase el capítulo <I>Heroku</I> <A HREF="node253.html#chapter:heroku">58</A>
+<LI>Véase el capítulo <I>Heroku</I> <A HREF="node253.html#chapter:heroku"><IMG  ALIGN="BOTTOM" BORDER="1" ALT="[*]" SRC="crossref.png"></A>
 </LI>
 <LI><A NAME="tex2html260"
   HREF="https://devcenter.heroku.com/articles/heroku-postgresql">Heroku Postgres</A>
 </LI>
-<LI>Véase el capítulo <I>DataMapper</I> <A HREF="node262.html#chapter:datamapper">59</A>
+<LI>Véase el capítulo <I>DataMapper</I> <A HREF="node262.html#chapter:datamapper"><IMG  ALIGN="BOTTOM" BORDER="1" ALT="[*]" SRC="crossref.png"></A>
 </LI>
 </UL>
 
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html2664"
+<A NAME="tex2html1680"
   HREF="node51.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2658"
+<A NAME="tex2html1674"
   HREF="node44.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2652"
+<A NAME="tex2html1668"
   HREF="node49.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2660"
-  HREF="node281.html">
+<A NAME="tex2html1676"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2662"
-  HREF="node284.html">
+<A NAME="tex2html1678"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
@@ -303,11 +303,11 @@ y
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2665"
+<B> Sig:</B> <A NAME="tex2html1681"
   HREF="node51.html">Práctica: Análisis de Ámbito</A>
-<B>Sup:</B> <A NAME="tex2html2659"
+<B>Sup:</B> <A NAME="tex2html1675"
   HREF="node44.html">Análisis Sintáctico Ascendente en</A>
-<B> Ant:</B> <A NAME="tex2html2653"
+<B> Ant:</B> <A NAME="tex2html1669"
   HREF="node49.html">Construcción de las Tablas</A>
 </DIV>
 <!--End of Navigation Panel-->
