--- a/node56.html
+++ b/node56.html
@@ -28,20 +28,20 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html2752"
+<A NAME="tex2html1768"
   HREF="node57.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2746"
+<A NAME="tex2html1762"
   HREF="node44.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2740"
+<A NAME="tex2html1756"
   HREF="node55.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2748"
-  HREF="node281.html">
+<A NAME="tex2html1764"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2750"
-  HREF="node284.html">
+<A NAME="tex2html1766"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
@@ -80,19 +80,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2753"
+<B> Sig:</B> <A NAME="tex2html1769"
   HREF="node57.html">Precedencia y Asociatividad</A>
-<B>Sup:</B> <A NAME="tex2html2747"
+<B>Sup:</B> <A NAME="tex2html1763"
   HREF="node44.html">Análisis Sintáctico Ascendente en</A>
-<B> Ant:</B> <A NAME="tex2html2741"
+<B> Ant:</B> <A NAME="tex2html1757"
   HREF="node55.html">Algoritmo de Análisis LR</A>
 <B> Con:</B> 
-<A NAME="tex2html2748"
-  HREF="node281.html">
+<A NAME="tex2html1764"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html2750"
-  HREF="node284.html">
+<A NAME="tex2html1766"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
 </DIV>
@@ -101,27 +101,27 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <A NAME="CHILD_LINKS"><STRONG>Subsecciones</STRONG></A>
 
 <UL CLASS="ChildLinks">
-<LI><A NAME="tex2html2754"
+<LI><A NAME="tex2html1770"
   HREF="node56.html#SECTION045121000000000000000">Version</A>
-<LI><A NAME="tex2html2755"
+<LI><A NAME="tex2html1771"
   HREF="node56.html#SECTION045122000000000000000">Gramática Inicial</A>
-<LI><A NAME="tex2html2756"
+<LI><A NAME="tex2html1772"
   HREF="node56.html#SECTION045123000000000000000">Tablas</A>
-<LI><A NAME="tex2html2757"
+<LI><A NAME="tex2html1773"
   HREF="node56.html#SECTION045124000000000000000">Acciones Semánticas</A>
-<LI><A NAME="tex2html2758"
+<LI><A NAME="tex2html1774"
   HREF="node56.html#SECTION045125000000000000000">Tabla de Acciones y GOTOs</A>
-<LI><A NAME="tex2html2759"
+<LI><A NAME="tex2html1775"
   HREF="node56.html#SECTION045126000000000000000">defaultActions</A>
-<LI><A NAME="tex2html2760"
+<LI><A NAME="tex2html1776"
   HREF="node56.html#SECTION045127000000000000000">Reducciones</A>
-<LI><A NAME="tex2html2761"
+<LI><A NAME="tex2html1777"
   HREF="node56.html#SECTION045128000000000000000">Desplazamientos/Shifts</A>
-<LI><A NAME="tex2html2762"
+<LI><A NAME="tex2html1778"
   HREF="node56.html#SECTION045129000000000000000">Manejo de Errores</A>
-<LI><A NAME="tex2html2763"
+<LI><A NAME="tex2html1779"
   HREF="node56.html#SECTION0451210000000000000000">Analizador Léxico</A>
-<LI><A NAME="tex2html2764"
+<LI><A NAME="tex2html1780"
   HREF="node56.html#SECTION0451211000000000000000">Exportación</A>
 </UL>
 <!--End of Table of Child-Links-->
@@ -240,7 +240,7 @@ r = this.performAction.call(yyval, yytext, yyleng, yylineno, this.yy, action[1],
 El método <code>call</code>
 nos permite invocar una función como si fuera un método de algún otro 
 objeto. Véase la sección 
-<A HREF="node95.html#subsection:callyapply">15.7.3</A>.
+<A HREF="node95.html#subsection:callyapply"><IMG  ALIGN="BOTTOM" BORDER="1" ALT="[*]" SRC="crossref.png"></A>.
 
 <P>
 Este objeto <code>yyval</code> tiene dos atributos: <code>$</code> y <code>_$</code>.
@@ -841,20 +841,20 @@ debug&gt;
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html2752"
+<A NAME="tex2html1768"
   HREF="node57.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2746"
+<A NAME="tex2html1762"
   HREF="node44.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2740"
+<A NAME="tex2html1756"
   HREF="node55.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2748"
-  HREF="node281.html">
+<A NAME="tex2html1764"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2750"
-  HREF="node284.html">
+<A NAME="tex2html1766"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
@@ -893,11 +893,11 @@ debug&gt;
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2753"
+<B> Sig:</B> <A NAME="tex2html1769"
   HREF="node57.html">Precedencia y Asociatividad</A>
-<B>Sup:</B> <A NAME="tex2html2747"
+<B>Sup:</B> <A NAME="tex2html1763"
   HREF="node44.html">Análisis Sintáctico Ascendente en</A>
-<B> Ant:</B> <A NAME="tex2html2741"
+<B> Ant:</B> <A NAME="tex2html1757"
   HREF="node55.html">Algoritmo de Análisis LR</A>
 </DIV>
 <!--End of Navigation Panel-->
