--- a/node75.html
+++ b/node75.html
@@ -27,20 +27,20 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html3095"
+<A NAME="tex2html2111"
   HREF="node76.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html3089"
+<A NAME="tex2html2105"
   HREF="node69.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html3085"
+<A NAME="tex2html2101"
   HREF="node74.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html3091"
-  HREF="node281.html">
+<A NAME="tex2html2107"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html3093"
-  HREF="node284.html">
+<A NAME="tex2html2109"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
@@ -79,26 +79,26 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html3096"
-  HREF="node76.html">SEGUNDA PARTE: APUNTES DE</A>
-<B>Sup:</B> <A NAME="tex2html3090"
+<B> Sig:</B> <A NAME="tex2html2112"
+  HREF="node76.html">&#205;ndice General</A>
+<B>Sup:</B> <A NAME="tex2html2106"
   HREF="node69.html">Transformaciones Árbol</A>
-<B> Ant:</B> <A NAME="tex2html3086"
+<B> Ant:</B> <A NAME="tex2html2102"
   HREF="node74.html">Treehugger</A>
 <B> Con:</B> 
-<A NAME="tex2html3091"
-  HREF="node281.html">
+<A NAME="tex2html2107"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html3093"
-  HREF="node284.html">
+<A NAME="tex2html2109"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
 </DIV>
 <!--End of Navigation Panel-->
 
 <H1><A NAME="SECTION04760000000000000000"></A>
-   <A NAME="8705"></A>
+   <A NAME="8707"></A>
   
 <A NAME="practica:treetransofrmationsPL0"></A>
 <BR>
@@ -110,8 +110,8 @@ Partimos del código realizado en la práctica
 
 <P>
 Modifique el árbol generado por el código de esa práctica
-usando las transformaciones de <A NAME="8706"></A><SPAN  CLASS="textbf">constant folding</SPAN> o
-<A NAME="8708"></A><SPAN  CLASS="textbf">plegado de las constantes</SPAN>:
+usando las transformaciones de <A NAME="8708"></A><SPAN  CLASS="textbf">constant folding</SPAN> o
+<A NAME="8710"></A><SPAN  CLASS="textbf">plegado de las constantes</SPAN>:
 
 <P>
 <BR>
@@ -183,20 +183,20 @@ Opcionalmente si lo desea puede considerar otras transformaciones:
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html3095"
+<A NAME="tex2html2111"
   HREF="node76.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html3089"
+<A NAME="tex2html2105"
   HREF="node69.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html3085"
+<A NAME="tex2html2101"
   HREF="node74.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html3091"
-  HREF="node281.html">
+<A NAME="tex2html2107"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html3093"
-  HREF="node284.html">
+<A NAME="tex2html2109"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
@@ -235,11 +235,11 @@ Opcionalmente si lo desea puede considerar otras transformaciones:
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html3096"
-  HREF="node76.html">SEGUNDA PARTE: APUNTES DE</A>
-<B>Sup:</B> <A NAME="tex2html3090"
+<B> Sig:</B> <A NAME="tex2html2112"
+  HREF="node76.html">&#205;ndice General</A>
+<B>Sup:</B> <A NAME="tex2html2106"
   HREF="node69.html">Transformaciones Árbol</A>
-<B> Ant:</B> <A NAME="tex2html3086"
+<B> Ant:</B> <A NAME="tex2html2102"
   HREF="node74.html">Treehugger</A>
 </DIV>
 <!--End of Navigation Panel-->
