--- a/node77.html
+++ b/node77.html
@@ -7,8 +7,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   Jens Lippmann, Marek Rouchal, Martin Wilck and others -->
 <HTML>
 <HEAD>
-<TITLE>Introducción</TITLE>
-<META NAME="description" CONTENT="Introducción">
+<TITLE>&#205;ndice de Figuras</TITLE>
+<META NAME="description" CONTENT="&#205;ndice de Figuras">
 <META NAME="keywords" CONTENT="javascriptexamples">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -21,27 +21,27 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 
 <LINK REL="next" HREF="node78.html">
 <LINK REL="previous" HREF="node76.html">
-<LINK REL="up" HREF="node76.html">
+<LINK REL="up" HREF="javascriptexamples.html">
 <LINK REL="next" HREF="node78.html">
 </HEAD>
 
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html3198"
+<A NAME="tex2html2251"
   HREF="node78.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html3192"
-  HREF="node76.html">
+<A NAME="tex2html2245"
+  HREF="javascriptexamples.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html3186"
+<A NAME="tex2html2239"
   HREF="node76.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html3194"
-  HREF="node281.html">
+<A NAME="tex2html2247"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html3196"
-  HREF="node284.html">
+<A NAME="tex2html2249"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
@@ -80,45 +80,47 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html3199"
-  HREF="node78.html">Estructura Léxica</A>
-<B>Sup:</B> <A NAME="tex2html3193"
-  HREF="node76.html">SEGUNDA PARTE: APUNTES DE</A>
-<B> Ant:</B> <A NAME="tex2html3187"
-  HREF="node76.html">SEGUNDA PARTE: APUNTES DE</A>
+<B> Sig:</B> <A NAME="tex2html2252"
+  HREF="node78.html">&#205;ndice de Tablas</A>
+<B>Sup:</B> <A NAME="tex2html2246"
+  HREF="javascriptexamples.html">Apuntes de la Asignatura</A>
+<B> Ant:</B> <A NAME="tex2html2240"
+  HREF="node76.html">&#205;ndice General</A>
 <B> Con:</B> 
-<A NAME="tex2html3194"
-  HREF="node281.html">
+<A NAME="tex2html2247"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html3196"
-  HREF="node284.html">
+<A NAME="tex2html2249"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
 </DIV>
 <!--End of Navigation Panel-->
+<BR>
 
-<H1><A NAME="SECTION05100000000000000000">
-Introducción</A>
-</H1>
-
-<P>
-
+<H2><A NAME="SECTION06000000000000000000">
+&#205;ndice de Figuras</A>
+</H2><OL>
+<LI><A NAME="tex2html247"
+  HREF="node48.html#5755">NFA que reconoce los prefijos viables</A>
+<LI><A NAME="tex2html249"
+  HREF="node49.html#6125">DFA equivalente al NFA de la figura</A> <A HREF="node48.html#fig:nfa">5.1</A></OL>
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html3198"
+<A NAME="tex2html2251"
   HREF="node78.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html3192"
-  HREF="node76.html">
+<A NAME="tex2html2245"
+  HREF="javascriptexamples.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html3186"
+<A NAME="tex2html2239"
   HREF="node76.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html3194"
-  HREF="node281.html">
+<A NAME="tex2html2247"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html3196"
-  HREF="node284.html">
+<A NAME="tex2html2249"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
@@ -157,12 +159,12 @@ Introducción</A>
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html3199"
-  HREF="node78.html">Estructura Léxica</A>
-<B>Sup:</B> <A NAME="tex2html3193"
-  HREF="node76.html">SEGUNDA PARTE: APUNTES DE</A>
-<B> Ant:</B> <A NAME="tex2html3187"
-  HREF="node76.html">SEGUNDA PARTE: APUNTES DE</A>
+<B> Sig:</B> <A NAME="tex2html2252"
+  HREF="node78.html">&#205;ndice de Tablas</A>
+<B>Sup:</B> <A NAME="tex2html2246"
+  HREF="javascriptexamples.html">Apuntes de la Asignatura</A>
+<B> Ant:</B> <A NAME="tex2html2240"
+  HREF="node76.html">&#205;ndice General</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
