--- a/node78.html
+++ b/node78.html
@@ -7,8 +7,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   Jens Lippmann, Marek Rouchal, Martin Wilck and others -->
 <HTML>
 <HEAD>
-<TITLE>Estructura Léxica</TITLE>
-<META NAME="description" CONTENT="Estructura Léxica">
+<TITLE>&#205;ndice de Tablas</TITLE>
+<META NAME="description" CONTENT="&#205;ndice de Tablas">
 <META NAME="keywords" CONTENT="javascriptexamples">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -21,27 +21,27 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 
 <LINK REL="next" HREF="node79.html">
 <LINK REL="previous" HREF="node77.html">
-<LINK REL="up" HREF="node76.html">
+<LINK REL="up" HREF="javascriptexamples.html">
 <LINK REL="next" HREF="node79.html">
 </HEAD>
 
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html3212"
+<A NAME="tex2html2265"
   HREF="node79.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html3206"
-  HREF="node76.html">
+<A NAME="tex2html2259"
+  HREF="javascriptexamples.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html3200"
+<A NAME="tex2html2253"
   HREF="node77.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html3208"
-  HREF="node281.html">
+<A NAME="tex2html2261"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html3210"
-  HREF="node284.html">
+<A NAME="tex2html2263"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
@@ -80,45 +80,47 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html3213"
-  HREF="node79.html">Tipos, Valores y Variables</A>
-<B>Sup:</B> <A NAME="tex2html3207"
-  HREF="node76.html">SEGUNDA PARTE: APUNTES DE</A>
-<B> Ant:</B> <A NAME="tex2html3201"
-  HREF="node77.html">Introducción</A>
+<B> Sig:</B> <A NAME="tex2html2266"
+  HREF="node79.html">&#205;ndice de Materias</A>
+<B>Sup:</B> <A NAME="tex2html2260"
+  HREF="javascriptexamples.html">Apuntes de la Asignatura</A>
+<B> Ant:</B> <A NAME="tex2html2254"
+  HREF="node77.html">&#205;ndice de Figuras</A>
 <B> Con:</B> 
-<A NAME="tex2html3208"
-  HREF="node281.html">
+<A NAME="tex2html2261"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html3210"
-  HREF="node284.html">
+<A NAME="tex2html2263"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
 </DIV>
 <!--End of Navigation Panel-->
+<BR>
 
-<H1><A NAME="SECTION05200000000000000000">
-Estructura Léxica</A>
-</H1>
-
+<H2><A NAME="SECTION07000000000000000000">
+&#205;ndice de Tablas</A>
+</H2><OL>
+<LI><A NAME="tex2html128"
+  HREF="node20.html#3362">Una Gramática Simple</A></OL>
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html3212"
+<A NAME="tex2html2265"
   HREF="node79.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html3206"
-  HREF="node76.html">
+<A NAME="tex2html2259"
+  HREF="javascriptexamples.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html3200"
+<A NAME="tex2html2253"
   HREF="node77.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html3208"
-  HREF="node281.html">
+<A NAME="tex2html2261"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html3210"
-  HREF="node284.html">
+<A NAME="tex2html2263"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
@@ -157,12 +159,12 @@ Estructura Léxica</A>
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html3213"
-  HREF="node79.html">Tipos, Valores y Variables</A>
-<B>Sup:</B> <A NAME="tex2html3207"
-  HREF="node76.html">SEGUNDA PARTE: APUNTES DE</A>
-<B> Ant:</B> <A NAME="tex2html3201"
-  HREF="node77.html">Introducción</A>
+<B> Sig:</B> <A NAME="tex2html2266"
+  HREF="node79.html">&#205;ndice de Materias</A>
+<B>Sup:</B> <A NAME="tex2html2260"
+  HREF="javascriptexamples.html">Apuntes de la Asignatura</A>
+<B> Ant:</B> <A NAME="tex2html2254"
+  HREF="node77.html">&#205;ndice de Figuras</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
