--- a/node80.html
+++ b/node80.html
@@ -7,8 +7,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   Jens Lippmann, Marek Rouchal, Martin Wilck and others -->
 <HTML>
 <HEAD>
-<TITLE>Expresiones y Operadores</TITLE>
-<META NAME="description" CONTENT="Expresiones y Operadores">
+<TITLE>Bibliograf&#237;a</TITLE>
+<META NAME="description" CONTENT="Bibliograf&#237;a">
 <META NAME="keywords" CONTENT="javascriptexamples">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -19,29 +19,25 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 
 <LINK REL="STYLESHEET" HREF="mystyle.css">
 
-<LINK REL="next" HREF="node81.html">
 <LINK REL="previous" HREF="node79.html">
-<LINK REL="up" HREF="node76.html">
-<LINK REL="next" HREF="node81.html">
+<LINK REL="up" HREF="javascriptexamples.html">
 </HEAD>
 
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html3240"
-  HREF="node81.html">
-<IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html3234"
-  HREF="node76.html">
+<IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next_g.png"> 
+<A NAME="tex2html2283"
+  HREF="javascriptexamples.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html3228"
+<A NAME="tex2html2279"
   HREF="node79.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html3236"
-  HREF="node281.html">
+<A NAME="tex2html2285"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html3238"
-  HREF="node284.html">
+<A NAME="tex2html2287"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
@@ -78,47 +74,90 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   HREF="https://github.com/crguezl"><IMG
   WIDTH="32" ALIGN="BOTTOM" BORDER="0"
  SRC="logopcgull.gif"
- ALT="crguezl at github"></A>
-<BR>
-<B> Sig:</B> <A NAME="tex2html3241"
-  HREF="node81.html">Sentencias</A>
-<B>Sup:</B> <A NAME="tex2html3235"
-  HREF="node76.html">SEGUNDA PARTE: APUNTES DE</A>
-<B> Ant:</B> <A NAME="tex2html3229"
-  HREF="node79.html">Tipos, Valores y Variables</A>
+ ALT="crguezl at github"></A><BR>
+<B>Sup:</B> <A NAME="tex2html2284"
+  HREF="javascriptexamples.html">Apuntes de la Asignatura</A>
+<B> Ant:</B> <A NAME="tex2html2280"
+  HREF="node79.html">&#205;ndice de Materias</A>
 <B> Con:</B> 
-<A NAME="tex2html3236"
-  HREF="node281.html">
+<A NAME="tex2html2285"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html3238"
-  HREF="node284.html">
+<A NAME="tex2html2287"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
 </DIV>
 <!--End of Navigation Panel-->
 
-<H1><A NAME="SECTION05400000000000000000">
-Expresiones y Operadores</A>
-</H1>
+<H2><A NAME="SECTION09000000000000000000">
+Bibliograf&#237;a</A>
+</H2><DL COMPACT><DD><P></P><DT><A NAME="pilgrimhtml5">1</A>
+<DD>
+Mark Pilgrim.
+<BR><EM><A NAME="tex2html303"
+  HREF="http://diveinto.html5doctor.com/index.html">Dive into
+  HTML5</A></EM>.
+<BR>http://diveinto.html5doctor.com/index.html, 2013.
 
-<P>
+<P></P><DT><A NAME="wilson2008beautiful">2</A>
+<DD>
+G.&nbsp;Wilson and A.&nbsp;Oram.
+<BR><EM>Beautiful Code: Leading Programmers Explain How They Think</EM>.
+<BR>O'Reilly Media, 2008.
+
+<P></P><DT><A NAME="nathanuniversity">3</A>
+<DD>
+Nathan Whitehead.
+<BR><EM>Create Your Own Programming Language.
+  <A NAME="tex2html304"
+  HREF="http://nathansuniversity.com/">http://nathansuniversity.com/</A></EM>.
+<BR>2012.
+
+<P></P><DT><A NAME="nathanclosures">4</A>
+<DD>
+Nathan Whitehead.
+<BR><EM>What's a Closure?.
+  <A NAME="tex2html305"
+  HREF="http://nathansjslessons.appspot.com/">http://nathansjslessons.appspot.com/</A></EM>.
+<BR>2012.
+
+<P></P><DT><A NAME="Muchnick:1998:ACD:286076">5</A>
+<DD>
+Steven&nbsp;S. Muchnick.
+<BR><EM>Advanced compiler design and implementation</EM>.
+<BR>Morgan Kaufmann Publishers Inc., San Francisco, CA, USA, 1997.
+
+<P></P><DT><A NAME="mogensen2011introduction">6</A>
+<DD>
+T.&nbsp;Mogensen and T.A. Mogensen.
+<BR><EM>Introduction to compiler design</EM>.
+<BR>Undergraduate topics in computer science. Springer London, Limited,
+  2011.
+
+<P></P><DT><A NAME="Proebsting">7</A>
+<DD>
+Todd&nbsp;A. Proebsting.
+<BR>Burg, iburg, wburg, gburg: so many trees to rewrite, so little time
+  <I>(invited talk)</I>.
+<BR>In <EM>ACM SIGPLAN Workshop on Rule-Based Programming</EM>, pages
+  53-54, 2002.
+</DL>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html3240"
-  HREF="node81.html">
-<IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html3234"
-  HREF="node76.html">
+<IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next_g.png"> 
+<A NAME="tex2html2283"
+  HREF="javascriptexamples.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html3228"
+<A NAME="tex2html2279"
   HREF="node79.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html3236"
-  HREF="node281.html">
+<A NAME="tex2html2285"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html3238"
-  HREF="node284.html">
+<A NAME="tex2html2287"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
@@ -155,14 +194,11 @@ Expresiones y Operadores</A>
   HREF="https://github.com/crguezl"><IMG
   WIDTH="32" ALIGN="BOTTOM" BORDER="0"
  SRC="logopcgull.gif"
- ALT="crguezl at github"></A>
-<BR>
-<B> Sig:</B> <A NAME="tex2html3241"
-  HREF="node81.html">Sentencias</A>
-<B>Sup:</B> <A NAME="tex2html3235"
-  HREF="node76.html">SEGUNDA PARTE: APUNTES DE</A>
-<B> Ant:</B> <A NAME="tex2html3229"
-  HREF="node79.html">Tipos, Valores y Variables</A>
+ ALT="crguezl at github"></A><BR>
+<B>Sup:</B> <A NAME="tex2html2284"
+  HREF="javascriptexamples.html">Apuntes de la Asignatura</A>
+<B> Ant:</B> <A NAME="tex2html2280"
+  HREF="node79.html">&#205;ndice de Materias</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
