--- a/node9.html
+++ b/node9.html
@@ -28,20 +28,20 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1816"
+<A NAME="tex2html832"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1810"
+<A NAME="tex2html826"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1804"
+<A NAME="tex2html820"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1812"
-  HREF="node281.html">
+<A NAME="tex2html828"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1814"
-  HREF="node284.html">
+<A NAME="tex2html830"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
@@ -80,19 +80,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1817"
+<B> Sig:</B> <A NAME="tex2html833"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html1811"
+<B>Sup:</B> <A NAME="tex2html827"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html1805"
+<B> Ant:</B> <A NAME="tex2html821"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 <B> Con:</B> 
-<A NAME="tex2html1812"
-  HREF="node281.html">
+<A NAME="tex2html828"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1814"
-  HREF="node284.html">
+<A NAME="tex2html830"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
 </DIV>
@@ -103,23 +103,23 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html1818"
+<LI><A NAME="tex2html834"
   HREF="node9.html#SECTION04120010000000000000">index.html</A>
-<LI><A NAME="tex2html1819"
+<LI><A NAME="tex2html835"
   HREF="node9.html#SECTION04120020000000000000">global.css</A>
-<LI><A NAME="tex2html1820"
+<LI><A NAME="tex2html836"
   HREF="node9.html#SECTION04120030000000000000">temperature.js</A>
-<LI><A NAME="tex2html1821"
+<LI><A NAME="tex2html837"
   HREF="node9.html#SECTION04120040000000000000">Despliegue</A>
-<LI><A NAME="tex2html1822"
+<LI><A NAME="tex2html838"
   HREF="node9.html#SECTION04120050000000000000">Mocha y Chai</A>
-<LI><A NAME="tex2html1823"
+<LI><A NAME="tex2html839"
   HREF="node9.html#SECTION04120060000000000000">Pruebas: Estructura</A>
-<LI><A NAME="tex2html1824"
+<LI><A NAME="tex2html840"
   HREF="node9.html#SECTION04120070000000000000">Pruebas: <TT>index.html</TT></A>
-<LI><A NAME="tex2html1825"
+<LI><A NAME="tex2html841"
   HREF="node9.html#SECTION04120080000000000000">Pruebas: Añadir los tests</A>
-<LI><A NAME="tex2html1826"
+<LI><A NAME="tex2html842"
   HREF="node9.html#SECTION04120090000000000000">Pruebas: Véase</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
@@ -246,7 +246,7 @@ Despliegue</A>
 
 <UL>
 <LI>Deberá desplegar la aplicación en GitHub Pages como página de proyecto.
-Vea la sección <I>GitHub Project Pages</I> <A HREF="node159.html#subsection:githubprojectpages">40.4.4</A>.
+Vea la sección <I>GitHub Project Pages</I> <A HREF="node159.html#subsection:githubprojectpages"><IMG  ALIGN="BOTTOM" BORDER="1" ALT="[*]" SRC="crossref.png"></A>.
 </LI>
 </UL>
 
@@ -445,20 +445,20 @@ by Nicolas Perriault
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1816"
+<A NAME="tex2html832"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1810"
+<A NAME="tex2html826"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1804"
+<A NAME="tex2html820"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1812"
-  HREF="node281.html">
+<A NAME="tex2html828"
+  HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1814"
-  HREF="node284.html">
+<A NAME="tex2html830"
+  HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
@@ -497,11 +497,11 @@ by Nicolas Perriault
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1817"
+<B> Sig:</B> <A NAME="tex2html833"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html1811"
+<B>Sup:</B> <A NAME="tex2html827"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html1805"
+<B> Ant:</B> <A NAME="tex2html821"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 </DIV>
 <!--End of Navigation Panel-->
